k8s/api-gateway/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 80 # Exposed port on the service
      targetPort: 3000 # Port on the pod where the service will forward traffic
